<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.achal.expensetracker.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/expenses"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/mainPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"></com.github.mikephil.charting.charts.PieChart>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/overall_budget"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/overallBudgetBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="30dp"
                        android:progress="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

                    <TextView
                        android:id="@+id/txtOverallBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="24sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/foodBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="10dp"
                        android:text="Individual Budgets"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/foodpBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="30dp"
                        android:progress="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

                    <TextView
                        android:id="@+id/txtFoodBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/food"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <ProgressBar
                        android:id="@+id/livingBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="30dp"
                        android:progress="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

                    <TextView
                        android:id="@+id/txtLivingBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/living"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <ProgressBar
                        android:id="@+id/carBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="30dp"
                        android:progress="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

                    <TextView
                        android:id="@+id/txtCarBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/car_budget"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <ProgressBar
                        android:id="@+id/alcoholBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="30dp"
                        android:progress="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

                    <TextView
                        android:id="@+id/txtAlcoBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/alcohol_budget"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <ProgressBar
                        android:id="@+id/shoppingBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="30dp"
                        android:progress="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

                    <TextView
                        android:id="@+id/txtShoppingBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/shopping"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <ProgressBar
                        android:id="@+id/otherBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:minHeight="30dp"
                        android:progress="0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"></ProgressBar>

                    <TextView
                        android:id="@+id/txtOtherBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/other_budget"
                        android:textAlignment="center"
                        android:textSize="24sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
